Tocken 1.2
Create the refresh route to regenarate the access token by using refresh token
